--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ DB_HOST=localhost
 DB_PORT=5433
 DB_NAME=requirements_db
 DB_USER=postgres
-DB_PASSWORD=postgres  # Replace with the password you set during installation
+DB_PASSWORD=Patil1234  # Replace with the password you set during installation
 
 # Database URL - Direct format for simplicity
-DATABASE_URL=postgresql://postgres:postgres@localhost:5433/requirements_db  # Update password here too
+DATABASE_URL=postgresql://postgres:Patil1234@localhost:5433/requirements_db  # Update password here too
 
 # Embedding Model
 EMBED_MODEL=all-MiniLM-L6-v2
